# low-level-project

./: BUILD_INSTRUCTIONS.md  CMakeLists.txt  README.md  SDL2_BUILD_GUIDE.md  STAGE_0_AUDIT.md  build.ps1  run.bat  run.sh
docs/: BYTECODE_SPEC.md  LANGUAGE_SPEC.md  STAGE_1_SUMMARY.md  VM_EXPLANATION.md
examples/: factorial.cb  hello.cb  pong_game.cb
src/compiler/: ast.cpp  ast.h  cinebrew_main.cpp  codegen.cpp  codegen.h  compiler.cpp  compiler.h  lexer.cpp  lexer.h  parser.cpp  parser.h  semantic.cpp  semantic.h  token.cpp  token.h
src/gui/: game_loop.cpp  game_loop.h  game_runner.cpp  window.cpp  window.h
src/runtime/: runtime.cpp  runtime.h
src/vm/: instructions.h  vm.cpp  vm.h  vm_test_main.cpp
tests/: test_codegen.cpp  test_gameloop.cpp  test_lexer.cpp  test_parser.cpp  test_runtime.cpp  test_semantic.cpp  test_vm_basic.cpp  test_vm_factorial.cpp
